update - added brain biopsies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,5 @@ export(kraken_sunburst)
 export(load_or_create)
 export(padded_sort)
 export(read_krakenres)
-export(runCentrifuger)
+export(runApp)
 export(summarize_kraken_report)
