--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,13 +6,21 @@ Date: 2015-10-18
 Authors@R: person("Florian P", "Breitwieser", email = "fbreitw1@jhu.edu", role = c("aut", "cre"))
 Description: R package to visualize and analyse metagenomics data created by Kraken, metaphlan, and centrifuge.
 Imports: shiny (>= 0.1.12),
+         shinydashboard,
+         shinyjs,
          sparkline (>= 1.0),
          htmlwidgets (>= 0.5.1),
          sunburstR (>= 0.1),
-         DT (>= 0.1.39),
+         DT (>= 0.1.56),
          d3heatmap (>= 0.6.1),
          networkD3 (>= 0.2.6),
          gapmap(>= 0.0.2),
-         ggplot2(>= 1.0.1)
+         ggplot2(>= 1.0.1),
+         shinyFileTree
+Depends:
+         DT (>= 0.1.56)
+Remotes:
+  github::fbreitwieser/shinyFileTree,
+  github::rstudio/DT
 License: GPL-3
 LazyData: TRUE
