--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,10 @@
 
 export(beautify_colnames)
 export(beautify_string)
+export(comparisionModule)
+export(comparisionModuleUI)
+export(dataInputModule)
+export(dataInputModuleUI)
 export(filter_taxon)
 export(get_level_reads)
 export(get_nodes_and_links)
@@ -9,6 +13,7 @@ export(get_nreads)
 export(get_pileup)
 export(get_sample_name)
 export(get_seqlengths)
+export(humanreadable)
 export(info_message)
 export(kraken_sunburst)
 export(list_kraken_files)
@@ -17,7 +22,10 @@ export(padded_sort)
 export(plot_level_reads)
 export(plot_pileup)
 export(read_krakenres)
+export(read_reports)
+export(reportOverviewModule)
+export(reportOverviewModuleUI)
 export(runApp)
 export(sorted_kraken_files)
-export(summarize_kraken_report)
+export(summarize_report)
 export(zero_if_na)
