--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,8 @@ export(read_reports)
 export(reportOverviewModule)
 export(reportOverviewModuleUI)
 export(runApp)
+export(sampleModule)
+export(sampleModuleUI)
 export(sorted_kraken_files)
 export(summarize_report)
 export(zero_if_na)
