--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,6 +24,7 @@ Depends:
     DT (>= 0.1.56)
 Remotes: github::fbreitwieser/shinyFileTree,
     github::fbreitwieser/networkD3,
+    github::fbreitwieser/sunburstR,
     github::rstudio/DT
 License: GPL-3
 LazyData: TRUE
