--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: centrifuger
 Type: Package
 Title: Analyze and dispaly metagenomics data in R
-Version: 0.1.4
+Version: 0.1.5
 Date: 2016-05-07
 Authors@R: person("Florian P", "Breitwieser", email = "fbreitw1@jhu.edu", role = c("aut", "cre"))
 Description: R package to visualize and analyse metagenomics data created by
@@ -25,7 +25,7 @@ Depends:
 Remotes: github::fbreitwieser/shinyFileTree,
     github::fbreitwieser/networkD3,
     github::fbreitwieser/sunburstR,
-    github::rstudio/DT
+    github::htmlwidgets/sparkline
 License: GPL-3
 LazyData: TRUE
 RoxygenNote: 5.0.1
