--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: centrifuger
+Package: pavian
 Type: Package
 Title: Analyze and dispaly metagenomics data in R
 Version: 0.1.5
@@ -16,12 +16,14 @@ Imports:
     DT (>= 0.1.56),
     d3heatmap (>= 0.6.1),
     networkD3 (>= 0.2.6),
-    gapmap(>= 0.0.2),
-    ggplot2(>= 1.0.1),
+    gapmap (>= 0.0.2),
+    ggplot2 (>= 1.0.1),
     shinyFileTree,
-    rhandsontable
-Depends:
-    DT (>= 0.1.56)
+    rhandsontable,
+    Rsamtools,
+    ggthemes,
+    plyr,
+    htmlwidgets
 Remotes: github::fbreitwieser/shinyFileTree,
     github::fbreitwieser/networkD3,
     github::fbreitwieser/sunburstR,
@@ -30,3 +32,4 @@ Remotes: github::fbreitwieser/shinyFileTree,
 License: GPL-3
 LazyData: TRUE
 RoxygenNote: 5.0.1
+Suggests: testthat
