--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,23 +2,17 @@
 
 export(alignmentModule)
 export(alignmentModuleUI)
-export(beautify_colnames)
-export(beautify_string)
 export(comparisonModule)
 export(comparisonModuleUI)
 export(dataInputModule)
 export(dataInputModuleUI)
 export(filter_taxon)
 export(get_level_reads)
-export(get_nodes_and_links)
 export(get_nreads)
 export(get_pileup)
-export(get_sample_name)
 export(get_seqlengths)
 export(humanreadable)
-export(info_message)
 export(kraken_sunburst)
-export(list_kraken_files)
 export(load_or_create)
 export(padded_sort)
 export(plot_level_reads)
@@ -30,6 +24,8 @@ export(reportOverviewModuleUI)
 export(runApp)
 export(sampleModule)
 export(sampleModuleUI)
-export(sorted_kraken_files)
 export(summarize_report)
-export(zero_if_na)
+import(ggplot2)
+import(rhandsontable)
+import(shiny)
+import(shinydashboard)
