Revert bioc remote definition (only working in devtools 1.12, re-add later)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,8 +28,7 @@ Remotes: github::fbreitwieser/shinyFileTree,
     github::fbreitwieser/networkD3,
     github::fbreitwieser/sunburstR,
     github::htmlwidgets/sparkline,
-    github::rstudio/DT,
-    bioc::Rsamtools
+    github::rstudio/DT
 License: GPL-3
 LazyData: TRUE
 RoxygenNote: 5.0.1
