--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(alignmentModule)
 export(alignmentModuleUI)
+export(allcontaminants)
 export(comparisonModule)
 export(comparisonModuleUI)
 export(dataInputModule)
