--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: centrifuger
+Package: pavian
 Type: Package
 Title: Analyze and dispaly metagenomics data in R
 Version: 0.1.5
@@ -19,9 +19,8 @@ Imports:
     gapmap(>= 0.0.2),
     ggplot2(>= 1.0.1),
     shinyFileTree,
-    rhandsontable
-Depends:
-    DT (>= 0.1.56)
+    rhandsontable,
+    Rsamtools
 Remotes: github::fbreitwieser/shinyFileTree,
     github::fbreitwieser/networkD3,
     github::fbreitwieser/sunburstR,
