--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(comparisonModule)
 export(comparisonModuleUI)
 export(dataInputModule)
 export(dataInputModuleUI)
+export(extractModule)
+export(extractModuleUI)
 export(filter_taxon)
 export(get_level_reads)
 export(get_nreads)
