--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,17 +14,21 @@ Imports:
     htmlwidgets (>= 0.5.1),
     sunburstR (>= 0.1),
     DT (>= 0.1.56),
+    RColorBrewer,
     d3heatmap (>= 0.6.1),
+    pheatmap,
     networkD3 (>= 0.2),
     gapmap (>= 0.0.2),
     ggplot2 (>= 1.0.1),
-    shinyFileTree,
     rhandsontable,
-    Rsamtools,
     ggthemes,
     plyr,
     htmlwidgets
-Remotes: github::fbreitwieser/shinyFileTree,
+Suggests:
+    phyloseq,
+    biom,
+    Rsamtools
+Remotes:
     github::fbreitwieser/networkD3,
     github::fbreitwieser/sunburstR,
     github::htmlwidgets/sparkline,
