--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(alignmentModule)
 export(alignmentModuleUI)
 export(allcontaminants)
+export(beautify_colnames)
 export(comparisonModule)
 export(comparisonModuleUI)
 export(dataInputModule)
@@ -28,6 +29,7 @@ export(runApp)
 export(sampleModule)
 export(sampleModuleUI)
 export(summarize_report)
+export(zero_if_na)
 import(ggplot2)
 import(rhandsontable)
 import(shiny)
