--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,6 @@ Imports:
     shinyjs,
     sparkline (>= 1.0),
     htmlwidgets (>= 0.5.1),
-    sunburstR (>= 0.1),
     DT (>= 0.1.56),
     RColorBrewer,
     d3heatmap (>= 0.6.1),
@@ -27,10 +26,10 @@ Imports:
 Suggests:
     phyloseq,
     biom,
+    sunburstR
     Rsamtools
 Remotes:
     github::fbreitwieser/networkD3,
-    github::fbreitwieser/sunburstR,
     github::htmlwidgets/sparkline,
     github::rstudio/DT
 License: GPL-3
