--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,6 @@ Imports:
     d3heatmap (>= 0.6.1),
     pheatmap,
     networkD3 (>= 0.2),
-    gapmap (>= 0.0.2),
     ggplot2 (>= 1.0.1),
     rhandsontable,
     ggthemes,
@@ -25,11 +24,14 @@ Imports:
     htmlwidgets
 Suggests:
     phyloseq,
+    scatterD3,
+    gapmap (>= 0.0.2),
     biom,
-    sunburstR
-    Rsamtools
+    Rsamtools,
+    sunburstR (>= 0.1)
 Remotes:
     github::fbreitwieser/networkD3,
+    github::fbreitwieser/sunburstR,
     github::htmlwidgets/sparkline,
     github::rstudio/DT
 License: GPL-3
