update - made reading reports way faster

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,8 @@ export(kraken_sunburst)
 export(load_or_create)
 export(plot_level_reads)
 export(plot_pileup)
-export(read_krakenres)
+export(read_report)
+export(read_report2)
 export(read_reports)
 export(reportOverviewModule)
 export(reportOverviewModuleUI)
