--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,13 +10,12 @@ Imports:
     shiny (>= 0.1.12),
     shinydashboard,
     shinyjs,
+    shinyBS,
     sparkline (>= 1.0),
     htmlwidgets (>= 0.5.1),
     DT (>= 0.1.56),
     RColorBrewer,
-    d3heatmap (>= 0.6.1),
-    pheatmap,
-    networkD3 (>= 0.2),
+    sankeyD3,
     ggplot2 (>= 1.0.1),
     rhandsontable,
     ggthemes,
@@ -25,13 +24,14 @@ Imports:
 Suggests:
     phyloseq,
     scatterD3,
+    d3heatmap (>= 0.6.1),
+    pheatmap,
+    sunburstR (>= 0.1)
     gapmap (>= 0.0.2),
     biom,
-    Rsamtools,
-    sunburstR (>= 0.1)
+    Rsamtools
 Remotes:
-    github::fbreitwieser/networkD3,
-    github::fbreitwieser/sunburstR,
+    github::fbreitwieser/sankeyD3,
     github::htmlwidgets/sparkline,
     github::rstudio/DT
 License: GPL-3
