Update to Pavian v0.2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,22 +2,17 @@
 
 export(alignmentModule)
 export(alignmentModuleUI)
-export(allcontaminants)
 export(beautify_colnames)
 export(comparisonModule)
 export(comparisonModuleUI)
 export(dataInputModule)
 export(dataInputModuleUI)
-export(extractModule)
-export(extractModuleUI)
 export(filter_taxon)
-export(get_level_reads)
+export(getDependency)
 export(get_nreads)
 export(get_pileup)
-export(get_reports_def_df)
 export(get_seqlengths)
 export(humanreadable)
-export(kraken_sunburst)
 export(load_or_create)
 export(plot_level_reads)
 export(plot_pileup)
@@ -35,3 +30,5 @@ import(ggplot2)
 import(rhandsontable)
 import(shiny)
 import(shinydashboard)
+importFrom(stats,median)
+importFrom(stats,quantile)
