Update to Pavian v0.2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 export(alignmentModule)
 export(alignmentModuleUI)
-export(allcontaminants)
 export(beautify_colnames)
 export(comparisonModule)
 export(comparisonModuleUI)
@@ -11,13 +10,11 @@ export(dataInputModuleUI)
 export(extractModule)
 export(extractModuleUI)
 export(filter_taxon)
-export(get_level_reads)
+export(getDependency)
 export(get_nreads)
 export(get_pileup)
-export(get_reports_def_df)
 export(get_seqlengths)
 export(humanreadable)
-export(kraken_sunburst)
 export(load_or_create)
 export(plot_level_reads)
 export(plot_pileup)
