--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,9 @@
 Package: pavian
 Type: Package
 Title: Analyze and dispaly metagenomics data in R
-Version: 0.1.6
-Date: 2016-05-07
+Version: 0.2
+URL: https://github.com/fbreitwieser/pavian
+BugReports: https://github.com/fbreitwieser/pavian/issues
 Authors@R: person("Florian P", "Breitwieser", email = "fbreitw1@jhu.edu", role = c("aut", "cre"))
 Description: R package to visualize and analyse metagenomics data created by
     Kraken, metaphlan, and centrifuge.
@@ -16,19 +17,13 @@ Imports:
     DT (>= 0.1.56),
     RColorBrewer,
     sankeyD3,
+    scatterD3,
     ggplot2 (>= 1.0.1),
     rhandsontable,
     ggthemes,
-    plyr,
-    htmlwidgets
+    plyr
 Suggests:
     phyloseq,
-    scatterD3,
-    d3heatmap (>= 0.6.1),
-    pheatmap,
-    sunburstR (>= 0.1)
-    gapmap (>= 0.0.2),
-    biom,
     Rsamtools
 Remotes:
     github::fbreitwieser/sankeyD3,
