--- a/inst/docker/shiny-server.conf
+++ b/inst/docker/shiny-server.conf
@@ -12,6 +12,9 @@ server {
     # Run this location in 'site_dir' mode, which hosts the entire directory
     # tree at '/srv/shiny-server'
     site_dir /srv/shiny-server;
+
+    # Turn off 'nice' error messages
+    sanitize_errors off;
     
     # Define where we should put the log files for this location
     log_dir /var/log/shiny-server;
