Add Rsamtools to Imports, and fix check warnings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,6 @@ export(comparisonModule)
 export(comparisonModuleUI)
 export(dataInputModule)
 export(dataInputModuleUI)
-export(extractModule)
-export(extractModuleUI)
 export(filter_taxon)
 export(getDependency)
 export(humanreadable)
@@ -23,10 +21,11 @@ export(reportOverviewModuleUI)
 export(runApp)
 export(sampleModule)
 export(sampleModuleUI)
-export(startsWith)
 export(summarize_report)
 export(zero_if_na)
 import(ggplot2)
 import(rhandsontable)
 import(shiny)
 import(shinydashboard)
+importFrom(htmltools,htmlDependency)
+importFrom(yaml,yaml.load_file)
