--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: pavian
 Type: Package
 Title: Analyze and dispaly metagenomics data in R
-Version: 0.2.1
+Version: 0.2.2
 URL: https://github.com/fbreitwieser/pavian
 BugReports: https://github.com/fbreitwieser/pavian/issues
 Authors@R: person("Florian P", "Breitwieser", email = "fbreitw1@jhu.edu", role = c("aut", "cre"))
@@ -20,11 +20,13 @@ Imports:
     scatterD3,
     ggplot2 (>= 1.0.1),
     rhandsontable,
+    htmltools,
     ggthemes,
-    plyr
-Suggests:
-    phyloseq,
+    plyr,
+    yaml,
     Rsamtools
+Suggests:
+    phyloseq
 Remotes:
     github::fbreitwieser/sankeyD3,
     github::htmlwidgets/sparkline,
