--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,6 +31,7 @@ Remotes:
     github::fbreitwieser/sankeyD3,
     github::htmlwidgets/sparkline,
     github::rstudio/DT
+    bioc::Rsamtools
 License: GPL-3
 LazyData: TRUE
 RoxygenNote: 5.0.1
