--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,8 @@ Version: 0.2.3
 URL: https://github.com/fbreitwieser/pavian
 BugReports: https://github.com/fbreitwieser/pavian/issues
 Authors@R: person("Florian P", "Breitwieser", email = "fbreitw1@jhu.edu", role = c("aut", "cre"))
-Description: R package to visualize and analyse metagenomics data created by
-    Kraken, metaphlan, and centrifuge.
+Description: R package to visualize and analyse metagenomics classification results from
+    Kraken, Centrifuge and MetaPhlAn.
 Imports:
     shiny (>= 0.1.12),
     shinydashboard,
