--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,10 @@ Imports:
     yaml,
     Rsamtools
 Suggests:
-    phyloseq
+    phyloseq,
+    knitr, 
+    rmarkdown
+VignetteBuilder: knitr
 Remotes:
     github::fbreitwieser/sankeyD3,
     github::htmlwidgets/sparkline,
