Remove Rsamtools remote

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,8 +31,7 @@ Suggests:
 Remotes:
     github::fbreitwieser/sankeyD3,
     github::htmlwidgets/sparkline,
-    github::rstudio/DT,
-    bioc::Rsamtools
+    github::rstudio/DT
 License: GPL-3
 LazyData: TRUE
 RoxygenNote: 5.0.1
