Updated to version 0.3
- Multiple improvements to unify display and rely less on custom styles.
- Replaced the naming 'level' with 'rank'.
- Make use of reactive bootstrap grid design for larger and smaller
displays
- Add proper error-handling when uploading 'bad' files
- Fix to the pileup plot - wasn't alwas calculated properly before

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,8 @@ export(filter_taxon)
 export(getDependency)
 export(humanreadable)
 export(load_or_create)
-export(plot_level_reads)
 export(plot_pileup)
+export(plot_rank_reads)
 export(read_report)
 export(read_report2)
 export(read_reports)
