--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: pavian
 Type: Package
 Title: Analyze and dispaly metagenomics data in R
-Version: 0.3
+Version: 0.3.1
 URL: https://github.com/fbreitwieser/pavian
 BugReports: https://github.com/fbreitwieser/pavian/issues
 Authors@R: person("Florian P", "Breitwieser", email = "fbreitw1@jhu.edu", role = c("aut", "cre"))
@@ -17,7 +17,7 @@ Imports:
     htmlwidgets (>= 0.5.1),
     DT (>= 0.1.56),
     RColorBrewer,
-    sankeyD3,
+    sankeyD3 (>= 0.3),
     scatterD3,
     ggplot2 (>= 1.0.1),
     rhandsontable,
