--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: pavian
 Type: Package
 Title: Analyze and dispaly metagenomics data in R
-Version: 0.3.4
+Version: 0.3.5
 URL: https://github.com/fbreitwieser/pavian
 BugReports: https://github.com/fbreitwieser/pavian/issues
 Authors@R: person("Florian P", "Breitwieser", email = "fbreitw1@jhu.edu", role = c("aut", "cre"))
@@ -30,9 +30,7 @@ Suggests:
     phyloseq,
     rmarkdown
 Remotes:
-    github::fbreitwieser/sankeyD3,
-    github::htmlwidgets/sparkline,
-    github::rstudio/DT
+    github::fbreitwieser/sankeyD3
 License: GPL-3
 LazyData: TRUE
 RoxygenNote: 5.0.1
