Move report merging to app
Fixes the multiple loading of reports. Also put 'isolate()'s at some
positions to fix invalidation issues when switching sets in the
datainput module

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(filter_taxon)
 export(getDependency)
 export(humanreadable)
 export(load_or_create)
+export(merge_reports)
 export(plot_pileup)
 export(plot_rank_reads)
 export(read_report)
