--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,22 +7,30 @@ export(comparisonModule)
 export(comparisonModuleUI)
 export(dataInputModule)
 export(dataInputModuleUI)
+export(filter_cladeReads)
+export(filter_taxa)
 export(filter_taxon)
 export(getDependency)
 export(humanreadable)
 export(load_or_create)
 export(merge_reports)
+export(merge_reports2)
+export(normalize)
 export(plot_pileup)
-export(plot_rank_reads)
+export(plot_taxRank_cladeReads)
 export(read_report)
 export(read_report2)
 export(read_reports)
+export(read_sample_data)
+export(read_server_directory1)
 export(reportOverviewModule)
 export(reportOverviewModuleUI)
+export(robust_zscore)
 export(runApp)
 export(sampleModule)
 export(sampleModuleUI)
 export(summarize_report)
+export(summarize_reports)
 export(zero_if_na)
 import(ggplot2)
 import(rhandsontable)
