Re-introduced pavian::runApp

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(read_server_directory1)
 export(reportOverviewModule)
 export(reportOverviewModuleUI)
 export(robust_zscore)
+export(runApp)
 export(sampleModule)
 export(sampleModuleUI)
 export(summarize_report)
