Fixed exports for Shiny UI and Server

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(alignmentModuleUI)
 export(beautify_colnames)
 export(comparisonModule)
 export(comparisonModuleUI)
+export(dashboardUI)
 export(dataInputModule)
 export(dataInputModuleUI)
 export(filter_cladeReads)
@@ -15,6 +16,7 @@ export(load_or_create)
 export(merge_reports)
 export(merge_reports2)
 export(normalize)
+export(pavianServer)
 export(plot_pileup)
 export(read_report)
 export(read_report2)
