Export the beautify_string function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(alignmentModule)
 export(alignmentModuleUI)
 export(beautify_colnames)
+export(beautify_string)
 export(comparisonModule)
 export(comparisonModuleUI)
 export(dashboardUI)
