Fix report generation with multiple sample sets

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(merge_reports2)
 export(normalize)
 export(pavianServer)
 export(plot_pileup)
+export(rbind_w_common_columns)
 export(read_report)
 export(read_report2)
 export(read_reports)
