--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: pavian
 Type: Package
 Title: Visualize and analyze metagenomics classification results
-Version: 0.6.2
+Version: 0.7
 URL: https://github.com/fbreitwieser/pavian
 BugReports: https://github.com/fbreitwieser/pavian/issues
 Authors@R: person("Florian P", "Breitwieser", email = "fbreitw1@jhu.edu", role = c("aut", "cre"))
-Description: R package to visualize and analyze metagenomics classification results from
+Description: R package and Shiny app to visualize and analyze metagenomics classification results from
     Kraken, Centrifuge and MetaPhlAn.
 Imports:
     shiny (>= 0.1.12),
