--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: pavian
 Type: Package
 Title: Visualize and analyze metagenomics classification results
-Version: 0.7
+Version: 0.8
 URL: https://github.com/fbreitwieser/pavian
 BugReports: https://github.com/fbreitwieser/pavian/issues
 Authors@R: person("Florian P", "Breitwieser", email = "fbreitw1@jhu.edu", role = c("aut", "cre"))
@@ -20,6 +20,7 @@ Imports:
     plyr,
     rmarkdown,
     sankeyD3,
+    shinyFileTree,
     RColorBrewer,
     colorspace,
     ggplot2,
@@ -29,6 +30,7 @@ Suggests:
     Rsamtools, knitr
 Remotes:
     github::fbreitwieser/sankeyD3
+    github::fbreitwieser/shinyFileTree
 License: GPL-3
 LazyData: TRUE
 RoxygenNote: 6.0.1
