Get rid of glob button - auto-detect it

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Imports:
     shinydashboard,
     shinyjs,
     shinycssloaders,
-    shinyWidgets,
+    shinyWidgets (>= 0.4.1.970),
     DT,
     dplyr,
     htmltools,
@@ -31,6 +31,7 @@ Suggests:
 Remotes:
     github::fbreitwieser/sankeyD3,
     github::fbreitwieser/shinyFileTree
+	github::dreamRs/shinyWidgets
 License: GPL-3
 LazyData: TRUE
 RoxygenNote: 6.0.1
