Export datatable_opts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(comparisonModuleUI)
 export(dashboardUI)
 export(dataInputModule)
 export(dataInputModuleUI)
+export(datatable_opts)
 export(filter_cladeReads)
 export(filter_taxa)
 export(filter_taxon)
