--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: pavian
 Type: Package
 Title: Visualize and analyze metagenomics classification results
-Version: 0.8.3
+Version: 0.8.4
 URL: https://github.com/fbreitwieser/pavian
 BugReports: https://github.com/fbreitwieser/pavian/issues
 Authors@R: person("Florian P", "Breitwieser", email = "fbreitw1@jhu.edu", role = c("aut", "cre"))
@@ -30,8 +30,7 @@ Suggests:
     Rsamtools, knitr
 Remotes:
     github::fbreitwieser/sankeyD3,
-    github::fbreitwieser/shinyFileTree,
-    github::dreamRs/shinyWidgets
+    github::fbreitwieser/shinyFileTree
 License: GPL-3
 LazyData: TRUE
 RoxygenNote: 6.0.1
